// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Caches {
  request_hash integer [pk]
  response jsonb [not null]
  expires_at timestamptz [not null]
}

Table seasons {
  start_year integer [pk]

  checks {
    `start_year > 1983`
  }
}

Enum conference {
  "East"
  "West"
}

Enum division {
  "Atlantic"
  "Central"
  "SouthEast"
  "NorthWest"
  "Pacific"
  "SouthWest"
}

Table teams {
  id integer [pk]
}

Table regular_season_team_standings {
  season integer [ref: > seasons.start_year]
  team_id integer [ref: > teams.id]
  rank integer [not null]
  win integer [not null]
  lose integer [not null]

  indexes {
    (season, team_id) [pk]
  }
}

Table team_properties {
  season integer [ref: > seasons.start_year]
  team_id integer [ref: > teams.id]
  team_city varchar [not null]
  team_name varchar [not null]
  team_tricode varchar(3) [not null]
  conference conference
  division division

  indexes {
    (season, team_id) [pk]
  }
  checks {
    `conference = East && (division = Atlantic || division = Central || division = SouthEast)`
    `conference = West && (division = NorthWest || division = Pacific || division = SouthWest)`
    `conference = null && division = null`
  }
}

Enum player_position {
  "PG"
  "SG"
  "SF"
  "PF"
  "C"
}

Table players {
  id integer [pk]
  full_name varchar [not null]
  abbreviation varchar [not null]
  date_of_birth date []
  draft_year integer []
  position player_position
  team_id integer [ref: > teams.id]
}

Enum game_status {
  "Scheduled"
  "Live"
  "Final"
}

Enum game_category {
  "Preseason"
  "Regular Season"
  "All Star"
  "Playoffs"
  "NBA Cup"
  "Play-In Tournament"
}

Table games {
  id integer [pk]
  game_id varchar(10) [not null]
  season integer [not null, ref: > seasons.start_year]
  category game_category [not null]
  status game_status [not null]
  start_epoc_sec integer [not null, note: 'Epoch seconds since the game started']
  elapsed_sec integer [not null, note: 'elapsed time in the game. Ex) 2160 at the end of the 3rd quarter.']
  home_team_id integer [not null, ref: > teams.id]
  away_team_id integer [not null, ref: > teams.id]
  home_score integer [not null]
  away_score integer [not null]
  playoff_label varchar
}

Table game_players {
  id integer [pk]
  game_id integer [not null, ref: > games.id]
  player_id integer [not null, ref: > players.id]
  jearsy_num varchar [not null]
  position player_position
  is_home bool [not null]
  is_starter bool [not null]
  is_active bool [not null]

  indexes {
    (game_id, player_id) [unique]
  }
}

Table stats {
  id integer [pk]
  game_id integer [ref: > games.id]
  game_player_id integer [ref: > game_players.id]
  team_id integer [ref: > teams.id]
  elapsed_sec integer [not null, note: 'elapsed time in the game. Ex) 2160 at the end of the 3rd quarter.']
  ms integer [not null]
  points integer [not null]
  offence_rebounds integer [not null]
  diffence_rebounds integer [not null]
  assists integer [not null]
  steals integer [not null]
  blocks integer [not null]
  field_goal_attempts integer [not null]
  field_goal_made integer [not null]
  three_point_attempts integer [not null]
  three_point_made integer [not null]
  free_throw_attempts integer [not null]
  free_throw_made integer [not null]
  turnovers integer [not null]
  blocked_shots_received integer
  personal_fouls integer [not null]
  technical_fouls integer
  fouls_drawn integer
  plus integer
  plus_minus integer [not null]
}

Table player_stats {
  stats_id integer [pk, ref: > stats.id]
  player_id integer [not null, ref: > players.id]
  season integer [not null, ref: > seasons.start_year]
  num_of_played_games integer [not null]

  indexes {
    (player_id, season) [unique]
  }
}

Table team_stats {
  stats_id integer [pk, ref: > stats.id]
  team_id integer [ref: > teams.id]
  season integer [ref: > seasons.start_year]
  num_of_played_games integer [not null]

  indexes {
    (team_id, season) [unique]
  }
}

Table game_actions {
  id integer [pk]
  game_id integer [ref: > games.id]
  action_number integer [not null]
  elapsed_ms integer [not null, note: 'elapsed time in the game. Ex) 2160000 at the end of the 3rd quarter.']
  game_player_id integer [ref: > game_players.id, note: 'if not personal event, personId can be 0']
  team_id integer [ref: > teams.id]
  description varchar [not null]
  action_type varchar [not null]
  sub_type varchar []
  shot_value integer []
  home_score integer [note: 'can be "" in stats']
  away_score integer [note: 'can be "" in stats']
  x_legacy integer [note: 'nullable in live']
  y_legacy integer [note: 'nullable in live']

  indexes {
    (game_id, action_number) [unique]
  }
}
